--- a/Europe/ComparingCountries.rmd
+++ b/Europe/ComparingCountries.rmd
@@ -13,7 +13,7 @@ data
 ### Use ggplot to create plot
 plot1 <- ggplot(data, aes(x=KEEPWARM, y=ARREARS, fill=REGION))+
   geom_point(alpha = 0.7, size=2) +
-  geom_label_repel(label = data$COUNTRY, size=4,
+  geom_label_repel(label = data$COUNTRY, size=4, # Add labels to graph
                    fontface = 'bold', color = 'white',
                    box.padding = unit(0.1, "lines"),
                    point.padding = unit(0.1, "lines"),
@@ -28,6 +28,6 @@ plot1 <- ggplot(data, aes(x=KEEPWARM, y=ARREARS, fill=REGION))+
 plot1
 
 ### Export as high resolution tiff.
-tiff("Graph_ArrearsWarmth_Large.tiff", width = 3500, height = 3000, res=300)
+tiff("Graph_ArrearsWarmth.tiff", width = 3500, height = 3000, res=300)
 plot(plot1)
 dev.off()
